# agentic-anything

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml  demo-pages.yml
benchmarks/: README.md  check_agentify.py  check_mcp.py  evaluate_beir.py  evaluate_multilingual.py  multilingual_queries.json
benchmarks/fixtures/: handbook_zh.md  incident.srt
benchmarks/results/: summary.json
demos/: README.md  build_agent_runs.py  build_course_pack.py  build_demos.py  build_gallery_data.py  index.html  record_llm_run.py  record_showcase_chats.py  render_hero_svg.py  review_recorded_llm_run.py  verify_demos.py
demos/results/: gallery-data.json  mcp-session.json  showcase.json  terminal-session.txt
demos/runs/: index.json  recorded-chats.json
demos/sources/: README.md  fair-guiding-principles-pmc4792175.html  incident.srt  nasa-gistemp-global.csv  operations-handbook.md  python-3.13-secrets.html  real-sources.json  service-metrics.csv
src/agentic_anything/: __init__.py  apis.py  chat.py  cli.py  config.py  crawler.py  fetcher.py  ingest.py  ingest_code.py  ingest_data.py  ingest_media.py  ingest_office.py  interface.py  llm.py  markdown.py  mcp.py  packer.py  parser.py  query.py  renderer.py  retrieval.py  util.py  (+3 more)
tests/: conftest.py  test_build_local.py  test_chat.py  test_cli.py  test_follow_attachments.py  test_ingest.py  test_ingest_v03.py  test_llm.py  test_parser.py  test_query.py  test_render.py  test_retrieval_mcp.py  test_review_fixes.py  test_review_fixes_v02.py  test_review_fixes_v03.py  test_server.py  test_sitecli.py  test_skills.py  test_util.py
(+541 files in other folders)
